k8s/ingress/protobuf-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protobuf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: protobof.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: protobuf-service
                port:
                  number: 80
